@@ -8,7 +8,7 @@
     <artifactId>remote-method-guesser</artifactId>
     <name>remote-method-guesser</name>
     <packaging>jar</packaging>
-    <version>4.3.1</version>
+    <version>4.4.0</version>
     <description>Identify common misconfigurations on Java RMI endpoints</description>
 
     <properties>
@@ -28,19 +28,19 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.8.0</version>
+            <version>2.11.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
-            <version>3.27.0-GA</version>
+            <version>3.29.2-GA</version>
         </dependency>
 
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>1.32</version>
+            <version>1.33</version>
         </dependency>
 
     </dependencies>
@@ -84,6 +84,17 @@
                         <mainClass>de.qtc.rmg.Starter</mainClass>
                         <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                     </manifest>
+                    <manifestEntries>
+                        <Add-Opens>
+                            java.base/java.io
+                            java.base/java.lang.reflect
+                            java.base/jdk.internal.misc
+                            java.rmi/java.rmi.server
+                            java.rmi/sun.rmi.server
+                            java.rmi/sun.rmi.transport
+                            java.rmi/sun.rmi.transport.tcp
+                        </Add-Opens>
+                    </manifestEntries>
                 </archive>
                 <descriptorRefs>
                   <descriptorRef>jar-with-dependencies</descriptorRef>
